# holochain

./: Cargo.toml  README.md  holochain-config.yml  index.js  package.json  rustfmt.toml  shim.js  test.happ
crates/cascade/: Cargo.toml
crates/cascade/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: cell.rs  conductor.rs  display.rs  dump.rs  main.rs
crates/dna_util/: Cargo.toml
crates/dna_util/src/: lib.rs
crates/fixt/src/: bool.rs  bytes.rs  lib.rs  number.rs  rng.rs  serialized_bytes.rs  string.rs  unit.rs
crates/hc/: Cargo.toml
crates/hc/src/: lib.rs
crates/hc_bundle/src/: cli.rs  error.rs  init.rs  packing.rs
crates/hc_bundle/tests/: test_cli.rs
crates/hc_sandbox/examples/: setup_5.rs
crates/hc_sandbox/src/: bundles.rs  calls.rs  cli.rs  cmds.rs  config.rs  generate.rs  lib.rs  ports.rs  run.rs  sandbox.rs  save.rs
crates/hc_sandbox/tests/: cli.rs
crates/hdk/: Cargo.toml  README.md
crates/hdk/src/: capability.rs  chain.rs  countersigning.rs  ed25519.rs  entry.rs  hdk.rs  info.rs  link.rs  map_extern.rs  p2p.rs  prelude.rs  random.rs  time.rs  trace.rs  x_salsa20_poly1305.rs
crates/hdk_derive/: Cargo.toml
crates/hdk_derive/src/: lib.rs
crates/holo_hash/: Cargo.toml
crates/holo_hash/src/: aliases.rs  encode.rs  encode_raw.rs  error.rs  fixt.rs  has_hash.rs  hash.rs  hash_b64.rs  hash_ext.rs  hash_type.rs  hashable_content.rs  hashed.rs  lib.rs  ser.rs
crates/holochain/: Cargo.toml
crates/holochain_cascade/: Cargo.toml
crates/holochain_cascade/src/: agent_activity.rs  authority.rs  cascade.rs  error.rs  lib.rs  test.rs  test_utils.rs
crates/holochain_cascade/src/authority/: get_element_query.rs  get_entry_ops_query.rs  get_links_ops_query.rs  test.rs
crates/holochain_cascade/src/authority/get_agent_activity_query/: deterministic.rs  hashes.rs
crates/holochain_cascade/src/test/: network_tests.rs  test.rs
crates/holochain_cascade/src/test_utils/: activity_test_data.rs  element_test_data.rs  entry_test_data.rs
crates/holochain_cascade/tests/: get_activity.rs  get_entry.rs  get_links.rs
crates/holochain_cascade2/: Cargo.toml
crates/holochain_conductor/: Cargo.toml
crates/holochain_conductor_api/: Cargo.toml
crates/holochain_elements/: Cargo.toml
crates/holochain_lmdb/: Cargo.toml
crates/holochain_nucleus/: Cargo.toml
crates/holochain_p2p/: Cargo.toml
crates/holochain_ribosome/: Cargo.toml
crates/holochain_sqlite/: build.rs
crates/holochain_state/: Cargo.toml
crates/holochain_state/src/: cascade.rs  chain_lock.rs  chain_sequence.rs  db.rs  dht_op_integration.rs  dna_def.rs  element_buf.rs  entry_def.rs  error.rs  host_fn_workspace.rs  lib.rs  metadata.rs  mutations.rs  query.rs  scratch.rs  source_chain.rs  test_utils.rs  universal_map.rs  validation_db.rs  validation_receipts.rs  wasm.rs  workspace.rs
crates/holochain_state/src/buffer/kv/buf/: tests.rs
crates/holochain_state/src/cascade/: error.rs  test.rs
crates/holochain_state/src/metadata/: chain_test.rs  links_test.rs  sys_meta.rs
crates/holochain_state/src/mutations/: error.rs
crates/holochain_state/src/query/: chain_head.rs  element_details.rs  entry_details.rs  error.rs  link.rs  link_details.rs  live_element.rs  live_entry.rs  test_data.rs  tests.rs
crates/holochain_state/src/query/live_element/: test.rs
crates/holochain_state/src/query/live_entry/: test.rs
crates/holochain_state/src/query/tests/: chain_sequence.rs  chain_test.rs  details.rs  links.rs  links_test.rs  store.rs  sys_meta.rs
crates/holochain_state/src/source_chain/: error.rs  source_chain_buffer.rs
crates/holochain_state/src/test_utils/: mutations_helpers.rs
crates/holochain_state/src/workspace/: call_zome.rs
crates/holochain_types/: Cargo.toml
crates/holochain_websocket/: Cargo.toml
crates/holochain_workspaces/: Cargo.toml
crates/holochain_zome_types/: Cargo.toml  README.md
crates/monolith/: Cargo.toml
crates/mr_bundle/: Cargo.toml
crates/release-automation/: README.md
crates/test_utils/plugin/hash_dumper/: Cargo.toml
crates/test_utils/plugin/hash_dumper/src/: lib.rs
crates/websocket/: Cargo.toml
crates/zome_types/: Cargo.toml
docs/: HDK_planning.md
log/: holochain.txt  lair-keystore.txt
(+691 files in other folders)
