[package]
name = "holochain_cascade"
version = "0.0.1"
description = "TODO"
license = "CAL-1.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
readme = "README.md"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
edition = "2018"
