[package]
name = "holochain_state"
version = "0.0.1"
description = "Datatypes for Holochain persisted state"
license = "CAL-1.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
edition = "2018"


[dependencies]
anyhow = "1.0.26"
async-trait = "0.1"
base64 = "0.10.1"
byteorder = "1.3.4"
cfg-if = "0.1"
chrono = "0.4.6"
derivative = "2.1.1"
derive_more = "0.99.3"
directories = "2.0.2"
either = "1.5.0"
fallible-iterator = "0.2.0"
fixt = { version = "0.0.1", path = "../fixt" }
futures = "0.3.1"
ghost_actor = "0.3.0-alpha.1"
ring = "0.16"
holo_hash = { version = "0.0.1", path = "../holo_hash", features = ["full"] }
holochain_lmdb = { version = "0.0.1", path = "../holochain_lmdb" }
holochain_keystore = { version = "0.0.1", path = "../keystore" }
holochain_serialized_bytes = "=0.0.45"
holochain_wasm_test_utils = { version = "0.0.1", path = "../test_utils/wasm" }
holochain_wasmer_host = "=0.0.50"
holochain_websocket = { version = "0.0.1", path = "../websocket" }
holochain_zome_types = { version = "0.0.1", path = "../holochain_zome_types" }
human-panic = "1.0.3"
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
lazy_static = "1.4.0"
legacy = { path = "../legacy", package = "holochain_legacy" }
mockall = "0.8"
must_future = "0.1.1"
nanoid = "0.3"
num_cpus = "1.8"
observability = "0.1"
parking_lot = "0.10"
predicates = "1.0.4"
rand = "0.7"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
serde_yaml = "0.8"
shrinkwraprs = "0.3.0"
structopt = "0.3.11"
strum = "0.18.0"
tempdir = "0.3.7"
thiserror = "1.0.22"
tokio = { version = "0.2.11", features = [ "full" ] }
tokio_safe_block_on = "0.1.2"
toml = "0.5.6"
tracing = "=0.1.21"
tracing-futures = "0.2.4"
url = "1.7.2"
url2 = "0.0.6"
url_serde = "0.2.0"
uuid = { version = "0.7", features = [ "serde", "v4" ] }

[dev-dependencies]
matches = { version = "0.1" }
