[package]
name = "holochain_workspaces"
version = "0.0.1"
description = "Holochain state used by Workflows"
license = "CAL-1.0"
homepage = "https://github.com/holochain/holochain"
documentation = "https://github.com/holochain/holochain"
authors = [ "Holochain Core Dev Team <devcore@holochain.org>" ]
edition = "2018"

[dependencies]
holochain_state = { version = "0.0.1", path = "../holochain_state" }
