[package]
name = "test_plugin_hash_dumper"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[workspace]

[lib]
name = "test_plugin_hash_dumper"
crate-type = [ "cdylib" ]

[dependencies]
holo_hash_core = { path = "../../../holo_hash_core" }
holochain_serialized_bytes = "=0.0.38"
